--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Simple todo application</title>
   </head>
   <body>
@@ -38,6 +38,6 @@
       </ul>
     </div>
 
-    <script src="main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
